# librsvg-minimal-example

./: CMakeLists.txt  build.sh  main.c  main.cpp  output  outtiger  readme.md
